[package]
name = "tkawen-api"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Hartem Yaakoub <DIRECTION@takawen.dz>"]
description = "TKAWEN Sovereign Cloud unified API gateway. Reverse-proxies the 7 pillars under one auth scheme."
license = "AGPL-3.0-or-later"
repository = "https://github.com/hartemyaakoub/tkawen-api"
readme = "README.md"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "http2", "tokio", "macros", "query", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "time"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", features = ["compression-gzip", "compression-br", "set-header", "trace", "cors"] }
hyper = { version = "1", features = ["http1", "http2"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
